<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bleh"
    tools:context=".loginActivity">

    <RelativeLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/login_applogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/logodark"
            />
        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_below="@id/login_applogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <EditText
                android:id="@+id/login_phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/input_design_2"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/grad3"
                android:textColorHint="@color/grad1"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number_input"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/input_design_2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/grad3"
                android:textColorHint="@color/grad1"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_input"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/remember_me_check"
                    style="@style/Material.Drawable.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:gravity="center_vertical"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cbd_strokeColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/forget_password_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@id/linear_layout_1"
                android:layout_marginLeft="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttons"
                android:padding="5dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/grad3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/admin_panel_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="100dp"
                android:layout_marginEnd="23dp"
                android:text="@string/login_as_admin"
                android:textColor="#00FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/not_admin_panel_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="23dp"
                android:text="@string/i_m_not_an_admin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"/>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>