<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/wedingo"/>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textColor="@color/grad3"
        android:fontFamily="@font/a_little_sunshine"
        android:textSize="20dp"

        android:textStyle="bold|italic" />
    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#00FFFFFF"
        android:padding="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/a_little_sunshine"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/grad3"/>
    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:text="@string/join_now"
        android:fontFamily="@font/a_little_sunshine"
        android:textSize="24sp"
        android:textStyle="bold"        android:textColor="@color/white"/>

</RelativeLayout>