<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/wedingo" />

    <EditText
        android:id="@+id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:layout_below="@id/register_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design_2"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/grad1"
        android:textColorHint="#817777"
        android:textAlignment="center"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/user_name_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/ic_phone_forwarded_black_24dp"
        android:background="@drawable/input_design_2"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:padding="15dp"
        android:textAlignment="center"
        android:paddingStart="20dp"
        android:textColor="@color/grad1"
        android:textColorHint="#817777"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:background="@drawable/input_design_2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/grad1"
        android:textColorHint="#817777"
        android:textSize="20sp"
        android:fontFamily="@font/product_sans_regular"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttons"
        android:padding="5dp"
        android:text="@string/create_a_account"
        android:textAllCaps="false"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        />
</RelativeLayout>